<resources>
    <string name="app_name">Neighbour\'s Chef: Vendor</string>

    <string name="title_settings">Settings</string>

    <string name="title_add_new_item">Add new item</string>
    <string name="action_cancel">Cancel</string>
    <string name="order">Order #: %s</string>
    <string name="set_price">₹ %s</string>
    <string name="set_items">%d %s</string>
    <string name="set_status">Status: %s</string>
    <string name="order_details">Order Details</string>
    <string name="user_details">User Details</string>
    <string name="address">Address</string>
    <string name="set_value">%s: %s</string>
    <string name="food_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nascetur ridiculus mus mauris vitae ultricies leo integer.</string>
    <string name="food">Food</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="vegetarian">Vegetarian </string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="day">Day</string>
    <string name="action_add">Add</string>
    <string name="title_orders">Orders</string>
    <string name="file_provider_name" translatable="false">.fileProvider</string>
    <string name="select_capture_image">Please select or capture image</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="uploading">Uploading… %.1f%%</string>
    <string name="title_menu">Menu</string>
    <string name="title_help">Help</string>
    <string name="communicate">Communicate</string>
    <string name="title_logout">Log Out</string>
    <string name="title_update_order_status">Update order status</string>
    <string name="empty_menu">New food items will be added soon!</string>
    <string name="for_day">Available %s</string>
    <string name="email_us">Email Us @ rtvkiz@gmail.com</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="call_us">Call Us @ 8989973062</string>
    <string name="empty_orders">Orders will be displayed here when available</string>
    <string name="action_update">Update</string>
    <string name="body">Body</string>

    <plurals name="items">
        <item quantity="one">Item</item>
        <item quantity="other">Items"</item>
    </plurals>
</resources>
