<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.fragment.help.HelpFragment">

    <ImageButton
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone_24"
        android:backgroundTint="@android:color/transparent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/horizontal_padding"
        android:paddingBottom="@dimen/horizontal_padding"
        android:layout_marginStart="10dp"
        android:text="@string/call_us"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_toEndOf="@id/btn_call"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="@dimen/horizontal_padding"
        android:paddingBottom="@dimen/horizontal_padding"
        android:text="@string/email_us"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_below="@id/text_contact" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/subject"
        android:layout_below="@id/text_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_subject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_body"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="@dimen/horizontal_padding"
        android:paddingBottom="@dimen/horizontal_padding"
        android:hint="@string/body"
        android:layout_below="@id/layout_email_subject">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_below="@id/layout_email_body"/>

</RelativeLayout>
