<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.additem.AddItemFragment">

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:alpha="0.25">

        <ImageView
            android:id="@+id/img_food"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/food"
            tools:src="@drawable/ic_food_default_64" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginTop="@dimen/card_margin"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginTop="@dimen/card_margin"
            android:hint="@string/price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_veg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginTop="@dimen/card_margin"
            android:text="@string/vegetarian"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:checked="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginTop="@dimen/card_margin">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_gravity="center_vertical"
                android:text="@string/day"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/btn_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:checked="true" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/btn_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomorrow"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            </RadioGroup>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_gravity="center"
            android:text="@string/action_add"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="Uploading... 50.0%"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            tools:progress="50"/>

    </LinearLayout>

</FrameLayout>
