<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/horizontal_padding"
    android:orientation="vertical"
    tools:context=".ui.fragment.order.details.OrderDetailsFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_details"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="Order #: 1234567890" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/card_margin_packed">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="10 items"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="end"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="\u20b9 100.00"/>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin_packed"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="Placed on 17 May 2020"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin_packed"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="Comments: Send quickly"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin_packed"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="Status: PLACED"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.skydoves.androidveil.VeilLayout
            android:id="@+id/veil_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:veilLayout_veiled="true"
            app:veilLayout_shimmerEnable="true"
            tools:veilLayout_veiled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_details"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Name: Long User Name"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Email: long_user_email@some_website.com"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Phone: 1234567890"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="1234, Large Name Apartments, Really Long Street Name, Big Locality Name\nBig City Name - 123456"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_address_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    tools:text="Behind some hospital"/>

            </LinearLayout>

        </com.skydoves.androidveil.VeilLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/card_food"
        tools:itemCount="3"/>

</LinearLayout>
